# rfolly

./: DESCRIPTION  Makefile  NAMESPACE  README.md  configure  configure.ac
R/: RcppExports.R
inst/include/folly/: folly-config.h
inst/include/folly/memory/detail/: MallocImpl.h
inst/include/folly/portability/: Malloc.h
src/: Makevars.in  Makevars.win  RcppExports.cpp  rfolly.cpp
tests/: tests.r
